[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "An EPUB renderer for mdbook."
name = "mdbook-epub"
version = "0.4.44"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Michael-F-Bryan/mdbook-epub"
documentation = "https://docs.rs/mdbook-epub"
keywords = ["epub", "mdbook", "documentation", "markdown"]
categories = ["command-line-interface", "development-tools"]
edition = "2021"
#exclude = ["/tests/long_book_example/*"]
rust-version = "1.84"

[package.metadata.release]
sign-commit = true

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "mdbook-epub"
doc = false

[dependencies]
clap = { version = "4.5", default-features = false, features = ["derive"] }
eyre = "0.6"
epub-builder = "0.7"
thiserror = "2.0"
pulldown-cmark = "0.10.0"
semver = "1.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.96"
mime_guess = "2.0"
env_logger = "0.11.1"
log = "0.4.17"
mdbook = { version = "0.4.44", default-features = false }
handlebars = "6.0"
toml = "0.5.11" # downgraded due to parent 'mdbook' dependency and error there
html_parser = "0.7.0"
url = "2.5"
ureq = "2.9"
urlencoding = "2.1"
const_format = "0.2"

[dev-dependencies]
tempfile = "3.15"
epub = "2.1"
serial_test = "3.2"
mockall = "0.13"

[profile.release]
lto = true
#strip = true
